--- a/.github/workflows/Workflow-05-Environment-Variables.yaml
+++ b/.github/workflows/Workflow-05-Environment-Variables.yaml
@@ -16,21 +16,21 @@ jobs:
         env:
           STEP_VAR: I_AM_STEP_SCOPED
         run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"   # visible
-          echo "JOB_VAR:      $JOB_VAR"        # visible
-          echo "STEP_VAR:     $STEP_VAR"       # visible only here
+          echo "WORKFLOW_VAR: $WORKFLOW_VAR"
+          echo "JOB_VAR:      $JOB_VAR"       
+          echo "STEP_VAR:     $STEP_VAR"
 
       - name: Inspect scopes job 1 step 2
         run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"         # visible
-          echo "JOB_VAR:      $JOB_VAR"              # visible
-          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  # not set here
+          echo "WORKFLOW_VAR: $WORKFLOW_VAR"         
+          echo "JOB_VAR:      $JOB_VAR"            
+          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"  
 
   job-2:
     runs-on: ubuntu-24.04
     steps:
       - name: Inspect scopes job 2 step 2
         run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"                 # still visible
-          echo "JOB_VAR:      ${FOO:-<UNSET>}"               # not set here
-          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"          # not set here
+          echo "WORKFLOW_VAR: $WORKFLOW_VAR"                 
+          echo "JOB_VAR:      ${JOB_VAR:-<UNSET>}"               
+          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"          
